force-app/main/default/objects/MasterMap__c/MasterMap__c.object-meta.xml
<CustomObject>
    <label>Master Map</label>
    <nameField>
        <displayFormat>MM-{000000}</displayFormat>
        <label>Master Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>