force-app/main/default/objects/MasterMap__c/fields/AsIsCode__c.field-meta.xml
<CustomField>
    <fullName>AsIsCode__c</fullName>
    <label>AsIsCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>