force-app/main/default/objects/MasterMap__c/fields/AsIsName__c.field-meta.xml
<CustomField>
    <fullName>AsIsName__c</fullName>
    <label>AsIsName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>