force-app/main/default/objects/MasterMap__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>Dept</fullName>
            </value>
            <value>
                <fullName>BizAttr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>