force-app/main/default/objects/MasterMap__c/fields/RelatedAB__c.field-meta.xml
<CustomField>
    <fullName>RelatedAB__c</fullName>
    <description>merge : code/name 변경
invalidAsis : code/name 동일
newTobe : code/name 신규
equalsAll : code/name 동일
equalsCode : code동일 / name 변경</description>
    <label>RelatedAB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equalsAll</fullName>
            </value>
            <value>
                <fullName>newTobe</fullName>
            </value>
            <value>
                <fullName>invalidAsis</fullName>
            </value>
            <value>
                <fullName>merge</fullName>
            </value>
            <value>
                <fullName>equalsCode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>