force-app/main/default/objects/MasterMap__c/fields/TAFlag__c.field-meta.xml
<CustomField>
    <fullName>TAFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TA Flag</label>
    <type>Checkbox</type>
</CustomField>