force-app/main/default/objects/MasterMap__c/fields/ToBeBizAttribute__c.field-meta.xml
<CustomField>
    <fullName>ToBeBizAttribute__c</fullName>
    <label>ToBeBizAttribute</label>
    <length>50</length>
    <type>Text</type>
</CustomField>