force-app/main/default/objects/MasterMap__c/fields/ToBeBusinessType__c.field-meta.xml
<CustomField>
    <fullName>ToBeBusinessType__c</fullName>
    <label>ToBeBusinessType</label>
    <length>3</length>
    <type>Text</type>
</CustomField>