force-app/main/default/objects/MasterMap__c/fields/ToBeCode__c.field-meta.xml
<CustomField>
    <fullName>ToBeCode__c</fullName>
    <label>ToBeCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>