force-app/main/default/objects/MasterMap__c/fields/ToBeName__c.field-meta.xml
<CustomField>
    <fullName>ToBeName__c</fullName>
    <label>ToBeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>