force-app/main/default/objects/MasterMap__c/fields/ToBePSType__c.field-meta.xml
<CustomField>
    <fullName>ToBePSType__c</fullName>
    <label>ToBePSType</label>
    <length>5</length>
    <type>Text</type>
</CustomField>