force-app/main/default/objects/MasterMap__c/fields/ToBeSolution__c.field-meta.xml
<CustomField>
    <fullName>ToBeSolution__c</fullName>
    <label>ToBeSolution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>