force-app/main/default/objects/MasterMap__c/fields/ToBeWBSClass__c.field-meta.xml
<CustomField>
    <fullName>ToBeWBSClass__c</fullName>
    <label>ToBeWBSClass</label>
    <length>3</length>
    <type>Text</type>
</CustomField>